--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,139 +2,163 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liên Hệ Khoảng Trời Của Bé</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Raleway:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/app.css'>
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/main.css'>
-    <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/style.css'>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
-        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
-        integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Liên Hệ Khoảng Trời Của Bé</title>
+  <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Raleway:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/app.css'>
+  <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/main.css'>
+  <link rel="stylesheet" type="text/css" media="screen" href='/assets/css/style.css'>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+    integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
-    <header></header>
+  <header></header>
 
-    <div id="primary" class="container-fluid px-3 px-md-5 mt-3">
-        <form class="row g-3 needs-validation contact justify-content-center" novalidate>
-            <div class="row py-lg-5 py-3 mb-lg-0 mb-4">
-                <div class="col-lg-8 col-12 d-flex flex-column align-items-center gap-4">
-                    <div class=" col-md-8 col-12 d-flex flex-column justify-content-center align-items-center mb-3">
-                        <h1 class="title-section mb-2" data-aos="fade-right">Liên hệ</h1>
-                        <p class="h5 mb-4 mt-3 text-center">Đăng ký nhận tư vấn từ đội ngũ chuyên gia</p>
-                        <span class="span-section">Hoàn toàn miễn phí! Đội ngũ chuyên giá của chúng mình sẽ giúp bạn xây
-                            dựng và tiếp cận những dự án tình nguyện phù hợp với bạn</span>
-                    </div>
-                    <div class="col-lg-8 col-12 position-relative">
-                        <label for="validationCustom01" class="form-label">Họ và tên</label>
-                        <input type="text" class="form-control" id="validationCustom01" placeholder="..." required>
-                        <div class="invalid-feedback">
-                            Họ và tên không phù hợp !
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-12 position-relative">
-                        <label for="validationCustom02" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="validationCustom02" placeholder="..." required>
-                        <div class="invalid-feedback">
-                            Email không phù hợp !
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-12 position-relative">
-                        <label for="validationCustom03" class="form-label">Số điện thoại</label>
-                        <input type="text" class="form-control" id="validationCustom03" placeholder="..." required>
-                        <div class="invalid-feedback">
-                            Số điện thoại không hợp lệ !
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-12 position-relative">
-                        <label for="validationTextarea" class="form-label">Nội dung</label>
-                        <textarea class="form-control" id="validationTextarea"
-                            placeholder="Nhập nội dung yêu cầu ..." rows="4" required></textarea>
-                        <div class="invalid-feedback">
-                            Vui lòng nhập nội dung liên hệ !
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-12 mt-3">
-                        <button class="btn-filled-pink d-block mx-auto" type="submit">Gửi yêu cầu</button>
-                    </div>
+  <div id="primary" class="container-fluid px-3 px-md-5 mt-3">
+    <section class="contact py-lg-4 py-3">
+      <ul class="nav nav-pills mb-5" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
+            type="button" role="tab" aria-controls="pills-contact" aria-selected="true">Tham gia tài trợ</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-embbed-tab" data-bs-toggle="pill" data-bs-target="#pills-embbed"
+            type="button" role="tab" aria-controls="pills-embbed" aria-selected="false">Tham gia KTCB</button>
+        </li>
+      </ul>
+      <div class="tab-content mb-4" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
+          tabindex="0">
+          <form class="row g-3 needs-validation justify-content-center" novalidate>
+            <div class="row mb-lg-0 mb-4">
+              <div class="col-lg-8 col-12 d-flex flex-column align-items-center gap-4">
+                <div class=" col-md-8 col-12 d-flex flex-column justify-content-center align-items-center mb-3">
+                  <h1 class="title-section mb-2" data-aos="fade-right">Liên hệ</h1>
+                  <p class="h5 mb-4 mt-3 text-center">Đăng ký nhận tư vấn từ đội ngũ chuyên gia</p>
+                  <span class="span-section">Hoàn toàn miễn phí! Đội ngũ chuyên giá của chúng mình sẽ giúp bạn xây
+                    dựng và tiếp cận những dự án tình nguyện phù hợp với bạn</span>
                 </div>
-                <div class="col-lg-4 my-auto d-none d-lg-block">
-                    <div class="d-flex flex-column align-items-start gap-4">
-                        <div class="contact-box">
-                            <div class="contact-box-icon">
-                                <i class="fa-regular fa-compass"></i>
-                            </div>
-                            <div class="contact-box-content">
-                                <h5>Địa chỉ</h5>
-                                <p>Vietnam, Hanoi</p>
-                            </div>
-                        </div>
-                        <div class="contact-box">
-                            <div class="contact-box-icon">
-                                <i class="fa-solid fa-phone"></i>
-                            </div>
-                            <div class="contact-box-content">
-                                <h5>Hotline</h5>
-                                <p>+84 705081088</p>
-                            </div>
-                        </div>
-                        <div class="contact-box">
-                            <div class="contact-box-icon">
-                                <i class="fa-solid fa-envelope"></i>
-                            </div>
-                            <div class="contact-box-content">
-                                <h5>Email</h5>
-                                <p>khoangtroicuabe.kby@gmail.com</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-xl-8 col-12 position-relative">
+                  <label for="validationCustom01" class="form-label">Họ và tên</label>
+                  <input type="text" class="form-control" id="validationCustom01" placeholder="..." required>
+                  <div class="invalid-feedback">
+                    Họ và tên không phù hợp !
+                  </div>
                 </div>
+                <div class="col-xl-8 col-12 position-relative">
+                  <label for="validationCustom02" class="form-label">Email</label>
+                  <input type="text" class="form-control" id="validationCustom02" placeholder="..." required>
+                  <div class="invalid-feedback">
+                    Email không phù hợp !
+                  </div>
+                </div>
+                <div class="col-xl-8 col-12 position-relative">
+                  <label for="validationCustom03" class="form-label">Số điện thoại</label>
+                  <input type="text" class="form-control" id="validationCustom03" placeholder="..." required>
+                  <div class="invalid-feedback">
+                    Số điện thoại không hợp lệ !
+                  </div>
+                </div>
+                <div class="col-xl-8 col-12 position-relative">
+                  <label for="validationTextarea" class="form-label">Nội dung</label>
+                  <textarea class="form-control" id="validationTextarea" placeholder="Nhập nội dung yêu cầu ..."
+                    rows="4" required></textarea>
+                  <div class="invalid-feedback">
+                    Vui lòng nhập nội dung liên hệ !
+                  </div>
+                </div>
+                <div class="col-xl-8 col-12 mt-3">
+                  <button class="btn-filled-pink d-block mx-auto" type="submit">Gửi yêu cầu</button>
+                </div>
+              </div>
+              <div class="col-lg-4 my-auto d-none d-lg-block">
+                <div class="d-flex flex-column align-items-start gap-4">
+                  <div class="contact-box">
+                    <div class="contact-box-icon">
+                      <i class="fa-regular fa-compass"></i>
+                    </div>
+                    <div class="contact-box-content">
+                      <h5>Địa chỉ</h5>
+                      <p>Vietnam, Hanoi</p>
+                    </div>
+                  </div>
+                  <div class="contact-box">
+                    <div class="contact-box-icon">
+                      <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div class="contact-box-content">
+                      <h5>Hotline</h5>
+                      <p>+84 705081088</p>
+                    </div>
+                  </div>
+                  <div class="contact-box">
+                    <div class="contact-box-icon">
+                      <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="contact-box-content">
+                      <h5>Email</h5>
+                      <p>khoangtroicuabe.kby@gmail.com</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </form>
-    </div>
+          </form>
 
-    <footer></footer>
+        </div>
+        <div class="tab-pane fade" id="pills-embbed" role="tabpanel" aria-labelledby="pills-embbed-tab" tabindex="0">
+          <div class="d-flex justify-content-center align-items-start">
+            <iframe
+              src="https://docs.google.com/forms/d/e/1FAIpQLSdnW4kvTgjuLViGyr9rhDe6g8cCPtPoJiw4_ob_fuZjNhzo3g/viewform?embedded=true"
+              width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
-    <button id="back-to-top"></button>
+  <footer></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-    <script defer src='/assets/js/main.js'></script>
+  <button id="back-to-top"></button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            duration: 1200,
-            once: true,
-            delay: 200,
-        });
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <script defer src='/assets/js/main.js'></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
     </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1200,
+      once: true,
+    });
+  </script>
 </body>
 
 </html>
